--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --White: White;
     --gray: #66666670;
     --gray2:#2A3334;
-    ;
+    --lightYellow:#FFBB1C0D;
 }
 
 /* Global */
@@ -296,8 +296,6 @@ header .contactus span {
     margin-left: 1rem;
 }
 
-.about .container .images img {}
-
 @media (max-width:992px) {
     .about .container .images img {
         width: 90%;
@@ -370,12 +368,14 @@ header .contactus span {
     align-items: center;
     margin-bottom: 2rem;
 }
+
 .solarkits >.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;    
 }
+
 .solarkits .container h1 {
     font-size: 2rem;
     margin: 0px;
@@ -387,32 +387,38 @@ header .contactus span {
     max-width: 50rem;
     text-align: center;
 }
+
 .solarkits .container .cards {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(301px, 1fr));
     gap: 1rem;
     margin-top: 1rem;
 }
+
 .solarkits .container .cards .card {
     box-shadow: 0px 0px 6px #eee;
     border-radius: 1rem;
 }
+
 .solarkits .container .cards .card figure {
     margin: 0px;
 }
+
 .solarkits .container .cards .card figure img {
     width: 100%;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
 }
+
 .solarkits .container .cards .card figure figcaption {
     padding: 1.5rem;
 }
-.solarkits .container .cards .card figure figcaption h3 {}
+
 .solarkits .container .cards .card figure figcaption p {
     font-size: 0.8rem;
     color: var(--gray2);
 }
+
 .solarkits .container .cards .card figure figcaption button {
     border: 0px;
     font-weight: 600;
@@ -420,4 +426,57 @@ header .contactus span {
     color: var(--Green);
     cursor: pointer;
 }
-.solarkits .container .cards .card figure figcaption button i {}
+
+/* Replacement */
+
+.replacement {
+    background-image: url("../images/replacement.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: var(--White);
+    padding: 5rem 0px;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.replacement .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.replacement .container .layout {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+    background-color: var(--gray);
+    padding: 1rem 3rem;
+    border-radius: 1rem;
+    z-index: 1;
+}
+
+.replacement .container .layout .blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
+    z-index: -1;
+    border-radius: 10px; 
+}
+
+
+.replacement .container .layout h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.replacement .container .layout p {
+    max-width: 50rem;
+    line-height: 1.5;
+}
